--- a/css/style.production.css
+++ b/css/style.production.css
@@ -152,7 +152,7 @@ opacity: 0.8;
 	padding: 20px;
 }
 
-.page-header__item:{
+.page-header__item {
 	-webkit-box-flex: 0;
 	    -ms-flex: 0 1 200px;
 	        flex: 0 1 200px;
@@ -227,25 +227,11 @@ opacity: 0.8;
 	}
 }
 
-button,
-.button1,
-.button2,
-.button3,
-.my-input {
 
-}
 
-button,
-.button {
 
-}
 
- button:hover,
- button: focus,
- .button:hover,
- .button:focus {
-
- }
+ 
 
 .button, button {
   /* overwrites browser defaults and resets the border */
