--- a/css/styles1.css
+++ b/css/styles1.css
@@ -83,7 +83,7 @@ button {
 	font-family: inherit;
 	/* styles the background color, font color, and text decoration (underline, etc.) of the button */
 background-color: #357b70;
-color: white;
+color: rgba(255, 255, 255, 0.692);
 text-decoration: none;
 /* adds spacing to the button (this will be discussed more in depth later)*/
 padding: 10px;
