--- a/css/style.production.css
+++ b/css/style.production.css
@@ -80,7 +80,7 @@ button {
 	font-family: inherit;
 	/* styles the background color, font color, and text decoration (underline, etc.) of the button */
 background-color: #357b70;
-color: white;
+color: rgba(255, 255, 255, 0.651);
 text-decoration: none;
 /* adds spacing to the button (this will be discussed more in depth later)*/
 padding: 10px;
@@ -242,7 +242,7 @@ opacity: 0.8;
   font-family: inherit;
   /* styles the button */
   background-color: #357b70;
-  color: white;
+  color: rgba(255, 255, 255, 0.692);
   text-decoration: none;
   padding: 10px;
   border-radius: 3px;
