--- a/css/style.production.css
+++ b/css/style.production.css
@@ -217,7 +217,9 @@ opacity: 0.8;
 
 .grid__item {
 	background-color: lightblue;
- 
+	border-radius: 25px;
+	box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
+	padding: 20px;
 }
 
 .grid {
