--- a/css/style.production.css
+++ b/css/style.production.css
@@ -115,11 +115,11 @@ opacity: 0.8;
 }
 
 .profile__portrait {
-	float: left;
-	width: 400px;
+	max-width: 100%;
 	margin-right: 40px;
 	height: auto;
 	border-radius: 90%;
+	width: 300px;
 }
 
 .page-footer {
@@ -234,16 +234,12 @@ opacity: 0.8;
 	display: grid;
 	-ms-grid-columns: 1fr 20px 1fr 20px 1fr;
 	grid-template-columns: 1fr 1fr 1fr;
-	grid-gap: 20px;
+	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+
+	grid-gap: 2rem;
 }
 
-.grid__item:last-child {
-	-ms-grid-column: 3;
-	grid-column: 3 /3;
-	-ms-grid-row: 1;
-	-ms-grid-row-span: 2;
-	grid-row: 1 / 3;
-}
+
 
 @media all and (max-width: 500px) {
 	.grid{
@@ -252,17 +248,7 @@ opacity: 0.8;
 	}
 }
 
-@media all and (min-width: 500px) and (max-width: 750px){
-	.grid {
-		-ms-grid-columns: 1fr 20px 1fr;
-		grid-template-columns: 1fr 1fr;
-      }
-  }
-
   @media all and (max-width: 750px) {
-  	.grid {
-  		grid-gap: 10px;
-  	}
   	.grid__item:last-child {
   		grid-column: auto / auto;
   		grid-row: auto / auto;
