--- a/css/style.production.css
+++ b/css/style.production.css
@@ -410,6 +410,20 @@ body {
 	list-style-type: none;
 }
 
+.button2 {
+	background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+	border-radius: 8px;
+}
+
 /*div {
 	padding: 10px; /* Adds a 10px inner spacing to all sides*/
 	/*margin: 10px; /* Adds a 10px outer spacing to all sides*/
